content: make cd section awesome

--- a/_home_sections/20_cd.html
+++ b/_home_sections/20_cd.html
@@ -6,14 +6,41 @@ nav_title: CD - Open Doors
 
 <div class="subtile">
 	<div class="block">
-		<h3>Hier ist sie. Unsere erste CD "open doors"!</h3>
+		<h2>Hier ist sie. Unsere erste CD "Open Doors"!</h2>
+
+		<img class="cd left" src="http://res.cloudinary.com/hoah/image/upload/c_scale,q_80,w_501/v1447006492/cover_xndr1s.png"alt="CD - House on a Hill - Open Doors" />
+
 		<p>Produziert 2015, nach vier Jahren Tourleben mit HOUSE ON A HILL und hunderten gemeinsamen Erlebnissen, die uns musikalisch geprägt haben.</p>
 
-		<p>"Open doors" steht für das was uns wichtig war und ist: Die Türen weit zu öffnen, für die unterschiedlichsten Stile und Songs, um ihnen unseren HOAH-typischen Sound zu verpassen und immer wieder Freunde, musikalische Weggefährten oder auch spontan völlig fremde Musiker einzuladen, mit uns zu spielen.</p>
+		<br>
 
-		<p>So entstand im legendären Hamburger Studio "Milchkettenmusik 2.0" etwas wirklich wunderbares.
-		Während der Produktion, die eigentlich lediglich das Kern-Quartet einspielen sollte, holten wir uns für verschiedene Stücke langjährige Freunde ins House. Wie in vielen Liveauftritten vorher, ein riesengroßer Spaß!</p>
+		<h3>"Open doors" steht für das was uns wichtig war und ist:</h3>
+		<p>Die Türen weit zu öffnen, für die unterschiedlichsten Stile und Songs, um ihnen unseren HOAH-typischen Sound zu verpassen und immer wieder Freunde, musikalische Weggefährten oder auch spontan völlig fremde Musiker einzuladen, mit uns zu spielen.</p>
 
-		<p>Es spielen: HOUSE ON A HILL - Claus "Dixi" Diercks, Hannes Diercks, Barbara Grischek, René Raue und als Gäste die sogenannten FREECLIMBER: Boris "Bobby" Sundmacher, Sören Böhme und Holger Lechterbeck.</p>
+		<br class="clear">
+
+		<h3>
+			So entstand im legendären Hamburger Studio "Milchkettenmusik 2.0" etwas wirklich wunderbares.
+		</h3>
+
+		<p class="text-center">
+			<img src="http://res.cloudinary.com/hoah/image/upload/c_scale,q_80,h_270/v1447008509/closeup_ukulelen_gtnalb.jpg"> &nbsp;
+			<img src="http://res.cloudinary.com/hoah/image/upload/c_scale,q_80,h_270/v1447008509/closeup_mics_ea67yb.jpg"> &nbsp;
+			<img src="http://res.cloudinary.com/hoah/image/upload/c_scale,q_80,h_270/v1447008509/closeup_amp_ash14f.jpg">
+		</p>
+
+		<p>Während der Produktion, die eigentlich lediglich das Kern-Quartet einspielen sollte, holten wir uns für verschiedene Stücke langjährige Freunde ins House. Wie in vielen Liveauftritten vorher, ein riesengroßer Spaß!</p>
+
+
+		<h3>Es spielen</h3>
+
+		<p>
+			<strong>HOUSE ON A HILL:</strong><br>
+			Claus "Dixi" Diercks, Hannes Diercks, Barbara Grischek, René Raue<br>
+			und als Gäste die sogenannten <strong>FREECLIMBER:</strong><br>
+			Boris "Bobby" Sundmacher, Sören Böhme und Holger Lechterbeck.
+		</p>
+
+		<p><img src="http://res.cloudinary.com/hoah/image/upload/c_scale,h_400,q_80/v1447008490/hintergrund_band_sohkrw.jpg"></p>
 	</div>
 </div>
