content: add band section

--- a/_home_sections/40_band.html
+++ b/_home_sections/40_band.html
@@ -1,6 +1,96 @@
 ---
 title: band
+image: hintergrund_claus_zp4ydu
 nav_title: Band
 ---
 
-Wir - über uns
+<div class="subtile">
+	<div class="block">
+		<h2>Die Band(geschichte)</h2>
+
+		<div class="member left claus for-both">
+			<img class="face" src="http://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1447000139/portrait_claus_rcmprm.png" alt="Claus Diercks - Portrait">
+			<h4>Claus "Dixi" Diercks</h4>
+			(Gesang, Gitarre, Bluesharp)
+		</div>
+
+		<div class="member right hannes for-small">
+			<img class="face" src="http://res.cloudinary.com/hoah/image/upload/c_fill,h_200,q_80,w_200/v1447000330/portrait_hannes_s8oesu.png" alt="Hannes Diercks - Portrait">
+			<h4>Hannes Diercks</h4>
+			(Gesang, Cajón, Percussion)
+		</div>
+
+		<div class="member left barbara for-small">
+			<img class="face" src="http://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1447000080/portrait_barbara_eya9is.png" alt="Barbara Grischek - Portrait">
+			<h4>Barbara Grischek</h4>
+			(Gesang, Ukulele, Gitarre, Bass, Percussion)
+		</div>
+
+		<div class="member right rene for-small">
+			<img class="face" src="http://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1447000099/portrait_rene_vkyybz.png" alt="René Raue - Portrait">
+			<h4>René Raue</h4>
+			(e-Gitarre, Slide)
+		</div>
+
+ 		<h3>2011 gründeten wir die Band zunächst als Trio.</h3>
+
+		<p>
+			 Zu unserem großen Glück konnten wir 2013 jedoch unseren lieben Freund René Raue für uns gewinnen, der seither die unverkennbaren Gitarren- und Slidesounds herstellt.
+		</p>
+
+		<p>
+			Wir haben den Komfort, drei Gesänge in der Band zu haben, so dass wir unsere Stücke alle mit mehrstimmigen Chören, oder kompletten Satzgesängen versehen können, was einen entscheidenden Teil des typischen HOAH-Sounds ausmacht.
+		</p>
+
+		<br class="clear">
+		<h3>Wir spielen Songs aus den unterschiedlichsten Gengres</h3>
+
+		<div class="member right hannes">
+			<img class="face" src="http://res.cloudinary.com/hoah/image/upload/c_fill,h_200,q_80,w_200/v1447000330/portrait_hannes_s8oesu.png" alt="Hannes Diercks - Portrait">
+			<h4>Hannes Diercks</h4>
+			(Gesang, Cajón, Percussion)
+		</div>
+
+		<h4>- völlig egal, Hauptsache Lieblingsstück -</h4>
+
+		<p>
+			  jedoch alle so verarbeitet, dass sie unverkennbar "wir" sind. Das kann Country sein, aber auch Soul, Blues, oder Pop. Traumschöne Balladen, bis zur Uptempo-Groovenummer und alles dazwischen. John Prine gesellt sich zu Bonnie Rait, Terry Evans zu John Hiatt, Paul McCartney und John Lennon zu Michael Jackson, Muddy Waters zu...HOUSE ON A HILL.
+		</p>
+
+		<br class="clear">
+		<h3>Über Musik zu schreiben ist müßig - das wissen wir alle.</h3>
+
+		<div class="member left barbara">
+			<img class="face" src="http://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1447000080/portrait_barbara_eya9is.png" alt="Barbara Grischek - Portrait">
+			<h4>Barbara Grischek</h4>
+			(Gesang, Ukulele, Gitarre, Bass, Percussion)
+		</div>
+
+		<p>
+			Wir spielen einen Stil und Sound, der sich vielleicht am ehesten, mit den Gerüchen der Lagerfeuer in den Bergen Tennessees, den Garküchen von New Orleans und Hamburgs regennassen Bordsteinkanten vergleichen lässt: Eindeutig, ehrlich akustisch und auf eine gewisse Art furchtbar zu Herzen gehend. Schwer zu beschreiben… Daher wird immer wieder stark empfohlen sich „HOAH“ live anzusehen. Denn über das hier theoretisch Beschriebene hinaus, hat man mit uns auch noch jede Menge Spaß!  Wenn jemand die Menschen sehr fröhlich stimmen kann, dann Claus! Aber natürlich lassen wir es uns als Band nicht nehmen, darauf einzusteigen - und das Publikum dabei voll mitzunehmen.
+		</p>
+
+		<br class="clear">
+		<h3>HOUSE ON A HILL  gibt es übrigens  auch zu sechst</h3>
+
+		<div class="member right rene">
+			<img class="face" src="http://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1447000099/portrait_rene_vkyybz.png" alt="René Raue - Portrait">
+			<h4>René Raue</h4>
+			(e-Gitarre, Slide)
+		</div>
+
+		<h4>(wie in unserem Video zur CD zu sehen)</h4>
+
+		<p>
+			Dann sind wir eine große Band, mit Stromgitarre, Bass und fetter Hammondorgel, die dem geneigten Tanzpublikum unser Repertoire in reichlich anderem Gewand um die Ohren haut. Auch der Bandname ist dann entsprechend länger: "HOUSE ON A HILL &amp; THE FABULOUS FREECLIMBERS".
+		</p>
+
+		<p>
+			Ergo: Uns kann man mieten. Für die kleine (Privat)-Feier, den Kulturverein, den heißen Jazzkeller, Festivals, aber auch für's Großevent.
+		</p>
+		<p>
+			Bis bald mal :)<br>
+			Claus, Barbara, René und Hannes, von HOUSE ON A HIL
+		</p>
+	</div>
+</div>
