--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ layout: homepage
 {% for section in site.home_sections %}
   <div class="section" id="{{ section.title }}"
     data-image="{{ section.image }}"
+    style="background-color: #{{ section.color }}"
   >
     {{ section.output }}
   </div>
