feat: convert to angular

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: homepage
 
 {% for section in site.home_sections %}
   <div class="section" id="{{ section.title }}"
-    data-image="{{ section.image }}"
+    hoah-image="{{ section.image }}"
     style="background-color: #{{ section.color }}"
   >
     {{ section.output }}
