--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@ layout: homepage
 ---
 
 {% for section in site.home_sections %}
-  <div class="section" id="{{ section.title }}"
-    hoah-image="{{ section.image }}"
-    style="background-color: #{{ section.color }}"
-  >
-    {{ section.output }}
-  </div>
+	<div class="section" id="{{ section.title }}">
+		<div class="sectionbgwrap">
+			<div
+				hoah-image="{{ section.image }}"
+				class="sectionbg"
+				style="background-color: #{{ section.color }};"
+			></div>
+		</div>
+		{{ section.output }}
+	</div>
 {% endfor %}
