visual: make black and white, use non-bold font for copy

--- a/_home_sections/30_events.html
+++ b/_home_sections/30_events.html
@@ -1,17 +1,14 @@
 ---
 title: events
-image: hintergrund_barbara_thaxnh
-color: d57a4d
+type: black
 nav_title: Konzerte
 ---
 
-<div class="subtile">
-	<div class="block">
-		<h2>Live-Konzerte</h2>
+<div class="block">
+	<h2>Live-Konzerte</h2>
 
-		<hoah-events>
-			<p>Unseren Tourplan findet ihr auf <a href="https://www.facebook.com/houseonahill/events">unserer Facebook Seite</a></p>
-		</hoah-events>
-	</div>
+	<hoah-events>
+		<p>Unseren Tourplan findet ihr auf <a href="https://www.facebook.com/houseonahill/events">unserer Facebook Seite</a></p>
+	</hoah-events>
 </div>
 
