feat: add video to cd section

--- a/_home_sections/20_cd.html
+++ b/_home_sections/20_cd.html
@@ -17,30 +17,32 @@ nav_title: CD - Open Doors
 		<h3>"Open doors" steht für das was uns wichtig war und ist:</h3>
 		<p>Die Türen weit zu öffnen, für die unterschiedlichsten Stile und Songs, um ihnen unseren HOAH-typischen Sound zu verpassen und immer wieder Freunde, musikalische Weggefährten oder auch spontan völlig fremde Musiker einzuladen, mit uns zu spielen.</p>
 
-		<br class="clear">
-
-		<h3>
+		<p>
 			So entstand im legendären Hamburger Studio "Milchkettenmusik 2.0" etwas wirklich wunderbares.
-		</h3>
-
-		<p class="text-center">
-			<img src="http://res.cloudinary.com/hoah/image/upload/c_scale,q_80,h_270/v1447008509/closeup_ukulelen_gtnalb.jpg"> &nbsp;
-			<img src="http://res.cloudinary.com/hoah/image/upload/c_scale,q_80,h_270/v1447008509/closeup_mics_ea67yb.jpg"> &nbsp;
-			<img src="http://res.cloudinary.com/hoah/image/upload/c_scale,q_80,h_270/v1447008509/closeup_amp_ash14f.jpg">
 		</p>
 
 		<p>Während der Produktion, die eigentlich lediglich das Kern-Quartet einspielen sollte, holten wir uns für verschiedene Stücke langjährige Freunde ins House. Wie in vielen Liveauftritten vorher, ein riesengroßer Spaß!</p>
 
+		<h3>Schaut euch das Video zu "Yellow Moon of Memphis" an</h3>
 
-		<h3>Es spielen</h3>
+		<p>und bekommt einen wunderbaren Windruck davon, wie es im Studio
+		ausgesehen hat und wie die Platte klingt.</p>
 
 		<p>
-			<strong>HOUSE ON A HILL:</strong><br>
-			Claus "Dixi" Diercks, Hannes Diercks, Barbara Grischek, René Raue<br>
-			und als Gäste die sogenannten <strong>FREECLIMBER:</strong><br>
-			Boris "Bobby" Sundmacher, Sören Böhme und Holger Lechterbeck.
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/EFMol2OKfqI" frameborder="0" allowfullscreen></iframe>
 		</p>
 
-		<p><img src="http://res.cloudinary.com/hoah/image/upload/c_scale,h_400,q_80/v1447008490/hintergrund_band_sohkrw.jpg"></p>
+		<h3>Es spielen HOUSE ON A HILL:</h3>
+
+		<p>
+			Claus "Dixi" Diercks, Hannes Diercks, Barbara Grischek, René Raue<br>
+		</p>
+
+		<h3>und als Gäste/FABULOUS FREECLIMBERS</h3>
+		<p>
+			Boris "Bobby" Sundmacher, Sören Böhme, Holger Lechterbeck und Marcel Marcus.
+		</p>
+
+		<span class="clear"></span>
 	</div>
 </div>
