feat(open-doors-medley): add player

--- a/_home_sections/20_cd.html
+++ b/_home_sections/20_cd.html
@@ -10,6 +10,15 @@ nav_title: CD - Open Doors
 
 		<img class="cd left" src="http://res.cloudinary.com/hoah/image/upload/c_scale,q_80,w_501/v1447006492/cover_xndr1s.png"alt="CD - House on a Hill - Open Doors" />
 
+		<div class="open-doors-medley">
+			<p>
+				Keine Kostprobe gefällig?
+			</p>
+				<audio controls>
+					<source src="https://s3.eu-central-1.amazonaws.com/houseonahill/open-doors-medley.mp3" type="audio/mpeg">
+				</audio>
+		</div>
+
 		<p>Produziert 2015, nach vier Jahren Tourleben mit HOUSE ON A HILL und hunderten gemeinsamen Erlebnissen, die uns musikalisch geprägt haben.</p>
 
 		<br>
