feat(band): add more formatting

--- a/_home_sections/40_band.html
+++ b/_home_sections/40_band.html
@@ -6,7 +6,7 @@ nav_title: Band
 
 <div class="subtile">
 	<div class="block">
-		<h2>Die Band(geschichte)</h2>
+		<h2>Die Band</h2>
 
 		<div class="member left claus for-both">
 			<img class="face" src="http://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1447000139/portrait_claus_rcmprm.png" alt="Claus Diercks - Portrait">
@@ -39,7 +39,7 @@ nav_title: Band
 		</p>
 
 		<p>
-			Wir haben den Komfort, drei Gesänge in der Band zu haben, so dass wir unsere Stücke alle mit mehrstimmigen Chören, oder kompletten Satzgesängen versehen können, was einen entscheidenden Teil des typischen HOAH-Sounds ausmacht.
+			Wir haben den Komfort, drei Gesänge in der Band zu haben, so dass wir unsere Stücke alle mit mehr&shy;stimmigen Chören, oder kompletten Satzgesängen versehen können, was einen entscheidenden Teil des typischen HOAH-Sounds ausmacht.
 		</p>
 
 		<br class="clear">
@@ -54,7 +54,11 @@ nav_title: Band
 		<h4>- völlig egal, Hauptsache Lieblingsstück -</h4>
 
 		<p>
-			  jedoch alle so verarbeitet, dass sie unverkennbar "wir" sind. Das kann Country sein, aber auch Soul, Blues, oder Pop. Traumschöne Balladen, bis zur Uptempo-Groovenummer und alles dazwischen. John Prine gesellt sich zu Bonnie Rait, Terry Evans zu John Hiatt, Paul McCartney und John Lennon zu Michael Jackson, Muddy Waters zu...HOUSE ON A HILL.
+			  jedoch alle so verarbeitet, dass sie unverkennbar "wir" sind.<br>
+			  Das kann Country sein, aber auch Soul, Blues, oder Pop. Traumschöne Balladen, bis zur Uptempo-Groovenummer und alles dazwischen.
+		</p>
+		<p>
+			  John Prine gesellt sich zu Bonnie Rait, Terry Evans zu John Hiatt, Paul McCartney und John Lennon zu Michael Jackson, Muddy Waters zu...HOUSE ON A HILL.
 		</p>
 
 		<br class="clear">
@@ -67,7 +71,11 @@ nav_title: Band
 		</div>
 
 		<p>
-			Wir spielen einen Stil und Sound, der sich vielleicht am ehesten, mit den Gerüchen der Lagerfeuer in den Bergen Tennessees, den Garküchen von New Orleans und Hamburgs regennassen Bordsteinkanten vergleichen lässt: Eindeutig, ehrlich akustisch und auf eine gewisse Art furchtbar zu Herzen gehend. Schwer zu beschreiben… Daher wird immer wieder stark empfohlen sich „HOAH“ live anzusehen. Denn über das hier theoretisch Beschriebene hinaus, hat man mit uns auch noch jede Menge Spaß!  Wenn jemand die Menschen sehr fröhlich stimmen kann, dann Claus! Aber natürlich lassen wir es uns als Band nicht nehmen, darauf einzusteigen - und das Publikum dabei voll mitzunehmen.
+			Wir spielen einen Stil und Sound, der sich vielleicht am ehesten, mit den Gerüchen der Lagerfeuer in den Bergen Tennessees, den Garküchen von New Orleans und Hamburgs regennassen Bordsteinkanten vergleichen lässt: Eindeutig, ehrlich akustisch und auf eine gewisse Art furchtbar zu Herzen gehend.<br>
+			Schwer zu beschreiben… Daher wird immer wieder stark empfohlen sich „HOAH“ live anzusehen. Denn über das hier theoretisch Beschriebene hinaus, hat man mit uns auch noch jede Menge Spaß!
+		</p>
+		<p>
+			Wenn jemand die Menschen sehr fröhlich stimmen kann, dann Claus! Aber natürlich lassen wir es uns als Band nicht nehmen, darauf einzusteigen - und das Publikum dabei voll mitzunehmen.
 		</p>
 
 		<br class="clear">
