fix(open-doors-medley): add essential "l"

--- a/_home_sections/20_cd.html
+++ b/_home_sections/20_cd.html
@@ -12,7 +12,7 @@ nav_title: CD - Open Doors
 
 		<div class="open-doors-medley">
 			<p>
-				Keine Kostprobe gefällig?
+				Kleine Kostprobe gefällig?
 			</p>
 				<audio controls>
 					<source src="https://s3.eu-central-1.amazonaws.com/houseonahill/open-doors-medley.mp3" type="audio/mpeg">
