fix(video): ensure video stays in viewport and has a nice view

--- a/_home_sections/21_yellow_moon_of_memphis_video.html
+++ b/_home_sections/21_yellow_moon_of_memphis_video.html
@@ -9,5 +9,7 @@ hide_nav: false
 	<p>und bekommt einen wunderbaren Windruck davon, wie es im Studio
 	ausgesehen hat und wie die Platte klingt.</p>
 
-	<iframe class="ymom-video cd" width="640" height="360" src="https://www.youtube.com/embed/EFMol2OKfqI" frameborder="0" allowfullscreen></iframe>
+	<div style="overflow: hidden;">
+		<iframe class="ymom-video cd" src="https://www.youtube.com/embed/EFMol2OKfqI" frameborder="0" allowfullscreen></iframe>
+	</div>
 </div>
