fix(band): use paragraphs for member-description

--- a/_home_sections/40_band.html
+++ b/_home_sections/40_band.html
@@ -11,25 +11,25 @@ nav_title: Band
 		<div class="member left claus for-both">
 			<img class="face" src="http://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1447000139/portrait_claus_rcmprm.png" alt="Claus Diercks - Portrait">
 			<h4>Claus "Dixi" Diercks</h4>
-			(Gesang, Gitarre, Bluesharp)
+			<p>(Gesang, Gitarre, Bluesharp)</p>
 		</div>
 
 		<div class="member right hannes for-small">
 			<img class="face" src="http://res.cloudinary.com/hoah/image/upload/c_fill,h_200,q_80,w_200/v1447000330/portrait_hannes_s8oesu.png" alt="Hannes Diercks - Portrait">
 			<h4>Hannes Diercks</h4>
-			(Gesang, Cajón, Percussion)
+			<p>(Gesang, Cajón, Percussion)</p>
 		</div>
 
 		<div class="member left barbara for-small">
 			<img class="face" src="http://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1447000080/portrait_barbara_eya9is.png" alt="Barbara Grischek - Portrait">
 			<h4>Barbara Grischek</h4>
-			(Gesang, Ukulele, Gitarre, Bass, Percussion)
+			<p>(Gesang, Ukulele, Gitarre, Bass, Percussion)</p>
 		</div>
 
 		<div class="member right rene for-small">
 			<img class="face" src="http://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1447000099/portrait_rene_vkyybz.png" alt="René Raue - Portrait">
 			<h4>René Raue</h4>
-			(e-Gitarre, Slide)
+			<p>(e-Gitarre, Slide)</p>
 		</div>
 
  		<h3>2011 gründeten wir die Band zunächst als Trio.</h3>
@@ -48,7 +48,7 @@ nav_title: Band
 		<div class="member right hannes">
 			<img class="face" src="http://res.cloudinary.com/hoah/image/upload/c_fill,h_200,q_80,w_200/v1447000330/portrait_hannes_s8oesu.png" alt="Hannes Diercks - Portrait">
 			<h4>Hannes Diercks</h4>
-			(Gesang, Cajón, Percussion)
+			<p>(Gesang, Cajón, Percussion)</p>
 		</div>
 
 		<h4>- völlig egal, Hauptsache Lieblingsstück -</h4>
@@ -67,7 +67,7 @@ nav_title: Band
 		<div class="member left barbara">
 			<img class="face" src="http://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1447000080/portrait_barbara_eya9is.png" alt="Barbara Grischek - Portrait">
 			<h4>Barbara Grischek</h4>
-			(Gesang, Ukulele, Gitarre, Bass, Percussion)
+			<p>(Gesang, Ukulele, Gitarre, Bass, Percussion)</p>
 		</div>
 
 		<p>
@@ -84,7 +84,7 @@ nav_title: Band
 		<div class="member right rene">
 			<img class="face" src="http://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1447000099/portrait_rene_vkyybz.png" alt="René Raue - Portrait">
 			<h4>René Raue</h4>
-			(e-Gitarre, Slide)
+			<p>(e-Gitarre, Slide)</p>
 		</div>
 
 		<h4>(wie in unserem Video zur CD zu sehen)</h4>
