--- a/_home_sections/21_yellow_moon_of_memphis_video.html
+++ b/_home_sections/21_yellow_moon_of_memphis_video.html
@@ -6,7 +6,7 @@ hide_nav: false
 <div class="block">
 	<h3>Schaut euch das Video zu "Yellow Moon of Memphis" an</h3>
 
-	<p>und bekommt einen wunderbaren Windruck davon, wie es im Studio
+	<p>und bekommt einen wunderbaren Eindruck davon, wie es im Studio
 	ausgesehen hat und wie die Platte klingt.</p>
 
 	<div style="overflow: hidden;">
