--- a/_home_sections/21_yellow_moon_of_memphis_video.html
+++ b/_home_sections/21_yellow_moon_of_memphis_video.html
@@ -4,12 +4,15 @@ hide_nav: false
 ---
 
 <div class="block">
-	<h3>Schaut euch das Video zu "Yellow Moon of Memphis" an</h3>
+	<h3>Videos</h3>
 
-	<p>und bekommt einen wunderbaren Eindruck davon, wie es im Studio
-	ausgesehen hat und wie die Platte klingt.</p>
+  <p>
+    Ein paar intime Einblicke in unserem Bühnenprogramm und die
+    Studioarbeit.
+  </p>
 
-	<div style="overflow: hidden;">
-		<iframe class="ymom-video cd" src="https://www.youtube.com/embed/EFMol2OKfqI" frameborder="0" allowfullscreen></iframe>
-	</div>
+	<p style="overflow: hidden;">
+		<iframe class="yt-video cd" src="https://www.youtube.com/embed/YZFtcg2iR-U" frameborder="0" allowfullscreen></iframe>
+		<iframe class="yt-video cd" src="https://www.youtube.com/embed/EFMol2OKfqI" frameborder="0" allowfullscreen></iframe>
+	</p>
 </div>
