content(social): add facebook and youtube links to banner

--- a/_home_sections/10_title.html
+++ b/_home_sections/10_title.html
@@ -1,4 +1,5 @@
 ---
+title: title
 image: cover_plain_mfkph2
 color: 3d7586
 hide_nav: false
@@ -19,6 +20,11 @@ hide_nav: false
 <h1 class="title">
 	{% include logo-white.svg %}
 </h1>
+
+<div class="title-social">
+  <a href="https://www.facebook.com/houseonahill">{% include facebook.svg %}</a>
+  <a href="https://www.youtube.com/channel/UC0sxTGcp5Xw1LBrXreEjsAQ">{% include youtube.svg %}</a>
+</div>
 
 <!-- <h2>Play</h2> -->
 <br />
