feat: update band section
welcome Claus Ulrich

--- a/_home_sections/40_band.html
+++ b/_home_sections/40_band.html
@@ -9,96 +9,107 @@ nav_title: Info
 		<h2>Die Band</h2>
 
 		<div class="member left claus for-both">
-			<img class="face" src="http://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1447000139/portrait_claus_rcmprm.png" alt="Claus Diercks - Portrait">
+			<img class="face" src="http://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1447000139/portrait_claus_rcmprm.png"
+			 alt="Claus Diercks - Portrait">
 			<h4>Claus "Dixi" Diercks</h4>
-			<p>(Gesang, Gitarre, Bluesharp)</p>
+			<p>(Gesang / Bluesharp / Akusikgitarre)</p>
 		</div>
 
-		<div class="member right hannes for-small">
-			<img class="face" src="http://res.cloudinary.com/hoah/image/upload/c_fill,h_200,q_80,w_200/v1447000330/portrait_hannes_s8oesu.png" alt="Hannes Diercks - Portrait">
+		<div class="member right barbara for-small">
+			<img class="face" src="http://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1447000080/portrait_barbara_eya9is.png"
+			 alt="Barbara Grischek - Portrait">
+			<h4>Barbara Grischek</h4>
+			<p>(Gesang / Ukulele / Percussion)</p>
+		</div>
+
+		<div class="member left rene for-small">
+			<img class="face" src="http://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1447000099/portrait_rene_vkyybz.png"
+			 alt="René Raue - Portrait">
+			<h4>René Raue</h4>
+			<p>(Stromgitarre)</p>
+		</div>
+
+		<div class="member right clausu for-small">
+			<img class="face" src="http://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1512243248/claus_u_ildsus.png"
+				alt="Claus Ulrich - Portrait">
+			<h4>Claus Ulrich</h4>
+			<p>(Bass / Gesang)</p>
+		</div>
+
+		
+		<p>
+			Das seit 2011 unter dem Namen HOUSE ON A HILL bestehende Hamburger Quartet, spielt akkustischen Blues, Folk, Americana und
+			Soultitel – immer zu Herzen, oder in die Beine gehend...oder beides.
+		</p>
+		
+		
+		<div class="member right barbara">
+			<img class="face" src="http://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1447000080/portrait_barbara_eya9is.png"
+				alt="Barbara Grischek - Portrait">
+			<h4>Barbara Grischek</h4>
+			<p>(Gesang / Ukulele / Percussion)</p>
+		</div>
+
+		<p>
+			Die Band zeichnet sich durch eine mitreißende, unbändige Spielfreude aus, die Blueslegende Claus „Dixi“ Diercks und seine
+			Musikerfamilie in nullkommanix ins Publikum übertragen, indem sie die Menschen ganz nah dabei sein lassen, an den Songs
+			und verrückten Geschichten aus dem Musikerleben. Viele langjährige Bluesfans erfahren hier vielleicht zum ersten mal,
+			dass Blues sehr sehr fröhlich stimmen kann...
+		</p>
+
+
+		<p>
+			Die Setliste hat es in sich, folgt sie doch nur einer einzigen Leitlinie: HOUSE ON A HILLs Lieblingssongs.
+		</p>
+
+		
+		<div class="member left rene">
+			<img class="face" src="http://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1447000099/portrait_rene_vkyybz.png"
+				alt="René Raue - Portrait">
+			<h4>René Raue</h4>
+			<p>(Stromgitarre)</p>
+		</div>
+
+		<p>
+			John Prine gesellt sich zu Bonnie Rait, Terry Evans zu John Hiatt, Paul McCartney zu John Lennon, Muddy Waters zu...HOUSE
+			ON A HILL. Ein Pressevertreter sagte einmal: „Die Band kann alles spielen. Der HOAH-Stil ist absolut unverkennbar und
+			in die Seele drängend, vor allem durch den dreistimmigen Gesang und dem deutlichen Augenmerk auf akustische Sounds.“
+		</p>
+
+		<br class="clear">
+		<div class="member right clausu">
+			<img class="face" src="http://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1512243248/claus_u_ildsus.png"
+			 alt="Claus Ulrich - Portrait">
+			<h4>Claus Ulrich</h4>
+			<p>(Bass / Gesang)</p>
+		</div>
+
+		<h4>Drei Dinge seien nicht unerwähnt zu lassen:</h4>
+
+		<p>
+			1. Man kann uns buchen! Für Eure Privatfeier, Firmenparty, Großevent, Lagerfeuer-Romantik, kleinen Club, Kulturverein, Bootstour
+			und für normale und unnormale Verrücktheiten. Und zwar unter oben stehender Mailadresse, oder über facebook-Nachricht.
+			Und weil wir so scharf aufs Spielen sind, wird immer SOFORT geantwortet.
+		</p>
+		<p>
+			2. HOUSE ON A HILL gibt es auch als große, vollelektrische Soulband.
+			<br /> Dann heißt sie HOUSE ON A HILL & THE FABULOUS FREECLIMBERS und erweitert sich um Holger Lechterbeck (Orgel) und Sören
+			Böhme (e-Bass). Auch hatten sich die FRECLIMBERS auch schon ein paarmal einen Bläsersatz gegönnt…alles eine Platz- und
+			Kostenfrage.
+		</p>
+		<div class="member left hannes">
+			<img class="face" src="http://res.cloudinary.com/hoah/image/upload/c_fill,h_200,q_80,w_200/v1447000330/portrait_hannes_s8oesu.png"
+				alt="Hannes Diercks - Portrait">
 			<h4>Hannes Diercks</h4>
 			<p>(Gesang, Cajón, Percussion)</p>
 		</div>
-
-		<div class="member left barbara for-small">
-			<img class="face" src="http://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1447000080/portrait_barbara_eya9is.png" alt="Barbara Grischek - Portrait">
-			<h4>Barbara Grischek</h4>
-			<p>(Gesang, Ukulele, Gitarre, Bass, Percussion)</p>
-		</div>
-
-		<div class="member right rene for-small">
-			<img class="face" src="http://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1447000099/portrait_rene_vkyybz.png" alt="René Raue - Portrait">
-			<h4>René Raue</h4>
-			<p>(e-Gitarre, Slide)</p>
-		</div>
-
- 		<h3>2011 gründeten wir die Band zunächst als Trio.</h3>
-
 		<p>
-			 Zu unserem großen Glück konnten wir 2013 jedoch unseren lieben Freund René Raue für uns gewinnen, der seither die unverkennbaren Gitarren- und Slidesounds herstellt.
-		</p>
-
-		<p>
-			Wir haben den Komfort, drei Gesänge in der Band zu haben, so dass wir unsere Stücke alle mit mehr&shy;stimmigen Chören, oder kompletten Satzgesängen versehen können, was einen entscheidenden Teil des typischen HOAH-Sounds ausmacht.
+			3. Bis November 2017 gehörte Hannes Diercks (Gesang / Cajón) als Gründungsmitglied zur Band, der sich jedoch mit seinem Bus
+			„Susy“ auf eine, auf unbestimmte Dauer angelegte, Europareise gemacht hat. Die Band hofft, er kommt wohlbehalten zurück
+			und hat Lust wieder einzusteigen, in die kleine große HOAH-Welt.
 		</p>
 
 		<br class="clear">
-		<h3>Wir spielen Songs aus den unterschiedlichsten Gengres</h3>
 
-		<div class="member right hannes">
-			<img class="face" src="http://res.cloudinary.com/hoah/image/upload/c_fill,h_200,q_80,w_200/v1447000330/portrait_hannes_s8oesu.png" alt="Hannes Diercks - Portrait">
-			<h4>Hannes Diercks</h4>
-			<p>(Gesang, Cajón, Percussion)</p>
-		</div>
-
-		<h4>- völlig egal, Hauptsache Lieblingsstück -</h4>
-
-		<p>
-			  jedoch alle so verarbeitet, dass sie unverkennbar "wir" sind.<br>
-			  Das kann Country sein, aber auch Soul, Blues, oder Pop. Traumschöne Balladen, bis zur Uptempo-Groovenummer und alles dazwischen.
-		</p>
-		<p>
-			  John Prine gesellt sich zu Bonnie Rait, Terry Evans zu John Hiatt, Paul McCartney und John Lennon zu Michael Jackson, Muddy Waters zu...HOUSE ON A HILL.
-		</p>
-
-		<br class="clear">
-		<h3>Über Musik zu schreiben ist müßig - das wissen wir alle.</h3>
-
-		<div class="member left barbara">
-			<img class="face" src="http://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1447000080/portrait_barbara_eya9is.png" alt="Barbara Grischek - Portrait">
-			<h4>Barbara Grischek</h4>
-			<p>(Gesang, Ukulele, Gitarre, Bass, Percussion)</p>
-		</div>
-
-		<p>
-			Wir spielen einen Stil und Sound, der sich vielleicht am ehesten, mit den Gerüchen der Lagerfeuer in den Bergen Tennessees, den Garküchen von New Orleans und Hamburgs regennassen Bordsteinkanten vergleichen lässt: Eindeutig, ehrlich akustisch und auf eine gewisse Art furchtbar zu Herzen gehend.<br>
-			Schwer zu beschreiben… Daher wird immer wieder stark empfohlen sich „HOAH“ live anzusehen. Denn über das hier theoretisch Beschriebene hinaus, hat man mit uns auch noch jede Menge Spaß!
-		</p>
-		<p>
-			Wenn jemand die Menschen sehr fröhlich stimmen kann, dann Claus! Aber natürlich lassen wir es uns als Band nicht nehmen, darauf einzusteigen - und das Publikum dabei voll mitzunehmen.
-		</p>
-
-		<br class="clear">
-		<h3>HOUSE ON A HILL  gibt es übrigens  auch zu sechst</h3>
-
-		<div class="member right rene">
-			<img class="face" src="http://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1447000099/portrait_rene_vkyybz.png" alt="René Raue - Portrait">
-			<h4>René Raue</h4>
-			<p>(e-Gitarre, Slide)</p>
-		</div>
-
-		<h4>(wie in unserem Video zur CD zu sehen)</h4>
-
-		<p>
-			Dann sind wir eine große Band, mit Stromgitarre, Bass und fetter Hammondorgel, die dem geneigten Tanzpublikum unser Repertoire in reichlich anderem Gewand um die Ohren haut. Auch der Bandname ist dann entsprechend länger: "HOUSE ON A HILL &amp; THE FABULOUS FREECLIMBERS".
-		</p>
-
-		<p>
-			Ergo: Uns kann man mieten. Für die kleine (Privat)-Feier, den Kulturverein, den heißen Jazzkeller, Festivals, aber auch für's Großevent.
-		</p>
-		<p>
-			Bis bald mal :)<br>
-			Claus, Barbara, René und Hannes, von HOUSE ON A HIL
-		</p>
 	</div>
 </div>
