fix(events): display direct link to facebook since facebook integration is currently not working

--- a/_home_sections/30_events.html
+++ b/_home_sections/30_events.html
@@ -7,8 +7,7 @@ nav_title: Konzerte
 <div class="block">
 	<h2>Live-Konzerte</h2>
 
-	<hoah-events>
-		<p>Unseren Tourplan findet ihr auf <a href="https://www.facebook.com/houseonahill/events">unserer Facebook Seite</a></p>
-	</hoah-events>
+	<p>Unsere Veranstaltungen findet ihr auf <a href="https://www.facebook.com/houseonahill/events">unserer Facebook Seite</a></p>
+	<p>(Auch Sichbar, wenn ihr keinen Account habt)</p>
 </div>
 
