use https wherever possible

--- a/_home_sections/20_cd.html
+++ b/_home_sections/20_cd.html
@@ -8,7 +8,7 @@ nav_title: Open Doors
 	<div class="block">
 		<h2>Hier ist sie. Unsere erste CD "Open Doors"!</h2>
 
-		<img class="cd left" src="http://res.cloudinary.com/hoah/image/upload/c_scale,q_80,w_501/v1447006492/cover_xndr1s.png"alt="CD - House on a Hill - Open Doors" />
+		<img class="cd left" src="https://res.cloudinary.com/hoah/image/upload/c_scale,q_80,w_501/v1447006492/cover_xndr1s.png"alt="CD - House on a Hill - Open Doors" />
 
 		<div class="open-doors-medley">
 			<p>
