--- a/events/index.html
+++ b/events/index.html
@@ -1,1 +1,1 @@
-<script type="text/javascript">window.location = 'http://houseonahill.de/#events';</script>
+<script type="text/javascript">window.location = 'https://houseonahill.de/#events';</script>
