--- a/info/index.html
+++ b/info/index.html
@@ -1,1 +1,1 @@
-<script type="text/javascript">window.location = 'http://houseonahill.de';</script>
+<script type="text/javascript">window.location = 'https://houseonahill.de';</script>
