--- a/_home_sections/40_band.html
+++ b/_home_sections/40_band.html
@@ -9,28 +9,28 @@ nav_title: Info
 		<h2>Die Band</h2>
 
 		<div class="member left claus for-both">
-			<img class="face" src="http://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1447000139/portrait_claus_rcmprm.png"
+			<img class="face" src="https://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1447000139/portrait_claus_rcmprm.png"
 			 alt="Claus Diercks - Portrait">
 			<h4>Claus "Dixi" Diercks</h4>
 			<p>(Gesang / Bluesharp / Akusikgitarre)</p>
 		</div>
 
 		<div class="member right barbara for-small">
-			<img class="face" src="http://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1447000080/portrait_barbara_eya9is.png"
+			<img class="face" src="https://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1447000080/portrait_barbara_eya9is.png"
 			 alt="Barbara Grischek - Portrait">
 			<h4>Barbara Grischek</h4>
 			<p>(Gesang / Ukulele / Percussion)</p>
 		</div>
 
 		<div class="member left rene for-small">
-			<img class="face" src="http://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1447000099/portrait_rene_vkyybz.png"
+			<img class="face" src="https://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1447000099/portrait_rene_vkyybz.png"
 			 alt="René Raue - Portrait">
 			<h4>René Raue</h4>
 			<p>(Stromgitarre)</p>
 		</div>
 
 		<div class="member right clausu for-small">
-			<img class="face" src="http://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1512243248/claus_u_ildsus.png"
+			<img class="face" src="https://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1512243248/claus_u_ildsus.png"
 				alt="Claus Ulrich - Portrait">
 			<h4>Claus Ulrich</h4>
 			<p>(Bass / Gesang)</p>
@@ -44,7 +44,7 @@ nav_title: Info
 		
 		
 		<div class="member right barbara">
-			<img class="face" src="http://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1447000080/portrait_barbara_eya9is.png"
+			<img class="face" src="https://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1447000080/portrait_barbara_eya9is.png"
 				alt="Barbara Grischek - Portrait">
 			<h4>Barbara Grischek</h4>
 			<p>(Gesang / Ukulele / Percussion)</p>
@@ -64,7 +64,7 @@ nav_title: Info
 
 		
 		<div class="member left rene">
-			<img class="face" src="http://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1447000099/portrait_rene_vkyybz.png"
+			<img class="face" src="https://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1447000099/portrait_rene_vkyybz.png"
 				alt="René Raue - Portrait">
 			<h4>René Raue</h4>
 			<p>(Stromgitarre)</p>
@@ -78,7 +78,7 @@ nav_title: Info
 
 		<br class="clear">
 		<div class="member right clausu">
-			<img class="face" src="http://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1512243248/claus_u_ildsus.png"
+			<img class="face" src="https://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1512243248/claus_u_ildsus.png"
 			 alt="Claus Ulrich - Portrait">
 			<h4>Claus Ulrich</h4>
 			<p>(Bass / Gesang)</p>
@@ -98,7 +98,7 @@ nav_title: Info
 			Kostenfrage.
 		</p>
 		<div class="member left hannes">
-			<img class="face" src="http://res.cloudinary.com/hoah/image/upload/c_fill,h_200,q_80,w_200/v1447000330/portrait_hannes_s8oesu.png"
+			<img class="face" src="https://res.cloudinary.com/hoah/image/upload/c_fill,h_200,q_80,w_200/v1447000330/portrait_hannes_s8oesu.png"
 				alt="Hannes Diercks - Portrait">
 			<h4>Hannes Diercks</h4>
 			<p>(Gesang, Cajón, Percussion)</p>
