remove hannes and note rené 😥

--- a/_home_sections/40_band.html
+++ b/_home_sections/40_band.html
@@ -22,23 +22,22 @@ nav_title: Info
 			<p>(Gesang / Ukulele / Percussion)</p>
 		</div>
 
-		<div class="member left rene for-small">
-			<img class="face" src="https://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1447000099/portrait_rene_vkyybz.png"
-			 alt="René Raue - Portrait">
-			<h4>René Raue</h4>
-			<p>(Stromgitarre)</p>
-		</div>
-
-		<div class="member right clausu for-small">
+		<div class="member left clausu for-small">
 			<img class="face" src="https://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1512243248/claus_u_ildsus.png"
 				alt="Claus Ulrich - Portrait">
 			<h4>Claus Ulrich</h4>
 			<p>(Bass / Gesang)</p>
 		</div>
 
+		<div class="member right rene for-small">
+			<img class="face" src="https://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1447000099/portrait_rene_vkyybz.png"
+			 alt="René Raue - Portrait">
+			<h4>René Raue</h4>
+			<p style="line-height: 1.1em"><small>(war bis zu seinem Tod im August 2018 unser Gitarrist. Wir vermissen ihn sehr)</small></p>
+		</div>
 		
 		<p>
-			Das seit 2011 unter dem Namen HOUSE ON A HILL bestehende Hamburger Quartet, spielt akkustischen Blues, Folk, Americana und
+			Das seit 2011 unter dem Namen HOUSE ON A HILL bestehende Hamburger Trio, spielt akkustischen Blues, Folk, Americana und
 			Soultitel – immer zu Herzen, oder in die Beine gehend...oder beides.
 		</p>
 		
@@ -62,13 +61,13 @@ nav_title: Info
 			Die Setliste hat es in sich, folgt sie doch nur einer einzigen Leitlinie: HOUSE ON A HILLs Lieblingssongs.
 		</p>
 
-		
-		<div class="member left rene">
-			<img class="face" src="https://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1447000099/portrait_rene_vkyybz.png"
-				alt="René Raue - Portrait">
-			<h4>René Raue</h4>
-			<p>(Stromgitarre)</p>
+		<div class="member left clausu">
+			<img class="face" src="https://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1512243248/claus_u_ildsus.png"
+			 alt="Claus Ulrich - Portrait">
+			<h4>Claus Ulrich</h4>
+			<p>(Bass / Gesang)</p>
 		</div>
+		
 
 		<p>
 			John Prine gesellt sich zu Bonnie Rait, Terry Evans zu John Hiatt, Paul McCartney zu John Lennon, Muddy Waters zu...HOUSE
@@ -77,18 +76,18 @@ nav_title: Info
 		</p>
 
 		<br class="clear">
-		<div class="member right clausu">
-			<img class="face" src="https://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1512243248/claus_u_ildsus.png"
-			 alt="Claus Ulrich - Portrait">
-			<h4>Claus Ulrich</h4>
-			<p>(Bass / Gesang)</p>
+		<div class="member right rene">
+			<img class="face" src="https://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1447000099/portrait_rene_vkyybz.png"
+				alt="René Raue - Portrait">
+			<h4>René Raue</h4>
+			<p style="line-height: 1.1em"><small>(war bis zu seinem Tod im August 2018 unser Gitarrist. Wir vermissen ihn sehr)</small></p>
 		</div>
 
-		<h4>Drei Dinge seien nicht unerwähnt zu lassen:</h4>
+		<h4>Zwei Dinge seien nicht unerwähnt zu lassen:</h4>
 
 		<p>
 			1. Man kann uns buchen! Für Eure Privatfeier, Firmenparty, Großevent, Lagerfeuer-Romantik, kleinen Club, Kulturverein, Bootstour
-			und für normale und unnormale Verrücktheiten. Und zwar unter oben stehender Mailadresse, oder über facebook-Nachricht.
+			und für normale und unnormale Verrücktheiten. Und zwar unter <a href="mailto:info@houseonahill.de">info@houseonahill.de</a>, oder über facebook-Nachricht.
 			Und weil wir so scharf aufs Spielen sind, wird immer SOFORT geantwortet.
 		</p>
 		<p>
@@ -96,17 +95,6 @@ nav_title: Info
 			<br /> Dann heißt sie HOUSE ON A HILL & THE FABULOUS FREECLIMBERS und erweitert sich um Holger Lechterbeck (Orgel) und Sören
 			Böhme (e-Bass). Auch hatten sich die FRECLIMBERS auch schon ein paarmal einen Bläsersatz gegönnt…alles eine Platz- und
 			Kostenfrage.
-		</p>
-		<div class="member left hannes">
-			<img class="face" src="https://res.cloudinary.com/hoah/image/upload/c_fill,h_200,q_80,w_200/v1447000330/portrait_hannes_s8oesu.png"
-				alt="Hannes Diercks - Portrait">
-			<h4>Hannes Diercks</h4>
-			<p>(Gesang, Cajón, Percussion)</p>
-		</div>
-		<p>
-			3. Bis November 2017 gehörte Hannes Diercks (Gesang / Cajón) als Gründungsmitglied zur Band, der sich jedoch mit seinem Bus
-			„Susy“ auf eine, auf unbestimmte Dauer angelegte, Europareise gemacht hat. Die Band hofft, er kommt wohlbehalten zurück
-			und hat Lust wieder einzusteigen, in die kleine große HOAH-Welt.
 		</p>
 
 		<br class="clear">
