feat: display bandsintown widget for events

--- a/_home_sections/30_events.html
+++ b/_home_sections/30_events.html
@@ -7,7 +7,9 @@ nav_title: Konzerte
 <div class="block">
 	<h2>Live-Konzerte</h2>
 
-	<p>Unsere Veranstaltungen findet ihr auf <a href="https://www.facebook.com/houseonahill/events">unserer Facebook Seite</a></p>
-	<p>(Auch Sichbar, wenn ihr keinen Account habt)</p>
+	<script charset="utf-8" src="https://widget.bandsintown.com/main.min.js"></script><a class="bit-widget-initializer" data-artist-name="House on a Hill" data-display-local-dates="false" data-display-past-dates="true" data-auto-style="false" data-text-color="#fff" data-link-color="#1756a9" data-popup-background-color="rgba(0,0,0,0)" data-background-color="rgba(0,0,0,0)" data-display-limit="25" data-link-text-color="#FFFFFF"></a>
+	<noscript>
+		<p>Unsere Veranstaltungen findet ihr auf <a href="https://www.bandsintown.com/houseonahill">bandsintown.com/houseonahill</a></p>
+	</noscript>
 </div>
 
