feat: add soeren

--- a/_home_sections/40_band.html
+++ b/_home_sections/40_band.html
@@ -29,7 +29,14 @@ nav_title: Info
 			<p>(Bass / Gesang)</p>
 		</div>
 
-		<div class="member right rene for-small">
+		<div class="member right soeren for-small">
+			<img class="face" src="https://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1512243248/soeren_qrko1l.png"
+				alt="Sören Böhme - Portrait">
+			<h4>Sören Böhme</h4>
+			<p>(Cajón / Schlagzeug / Gesang)</p>
+		</div>
+
+		<div class="member left rene for-small">
 			<img class="face" src="https://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1447000099/portrait_rene_vkyybz.png"
 			 alt="René Raue - Portrait">
 			<h4>René Raue</h4>
@@ -76,11 +83,12 @@ nav_title: Info
 		</p>
 
 		<br class="clear">
-		<div class="member right rene">
-			<img class="face" src="https://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1447000099/portrait_rene_vkyybz.png"
-				alt="René Raue - Portrait">
-			<h4>René Raue</h4>
-			<p style="line-height: 1.1em"><small>(war bis zu seinem Tod im August 2018 unser Gitarrist. Wir vermissen ihn sehr)</small></p>
+		
+		<div class="member right soeren">
+			<img class="face" src="https://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1512243248/soeren_qrko1l.png"
+				alt="Sören Böhme - Portrait">
+			<h4>Sören Böhme</h4>
+			<p>(Cajón / Schlagzeug / Gesang)</p>
 		</div>
 
 		<h4>Zwei Dinge seien nicht unerwähnt zu lassen:</h4>
@@ -96,6 +104,13 @@ nav_title: Info
 			Böhme (e-Bass). Auch hatten sich die FRECLIMBERS auch schon ein paarmal einen Bläsersatz gegönnt…alles eine Platz- und
 			Kostenfrage.
 		</p>
+
+		<div class="member left rene">
+			<img class="face" src="https://res.cloudinary.com/hoah/image/upload/c_fill,g_face,h_200,q_80,w_200/v1447000099/portrait_rene_vkyybz.png"
+				alt="René Raue - Portrait">
+			<h4>René Raue</h4>
+			<p style="line-height: 1.1em"><small>(war bis zu seinem Tod im August 2018 unser Gitarrist. Wir vermissen ihn sehr)</small></p>
+		</div>
 
 		<br class="clear">
 
